2006-07-07  Marko Anastasov <marko@marko.anastasov.name>

	* configure.in
	* examples/book/printing/Makefile.am: Split the printing example into
	"simple" and "advanced".
	* examples/book/printing/advanced/:
	* examples/book/printing/advanced/Makefile.am:
	* examples/book/printing/advanced/examplewindow.cc:
	* examples/book/printing/advanced/examplewindow.h:
	* examples/book/printing/advanced/main.cc:
	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h:
	* examples/book/printing/advanced/printformoperation.cc:
	* examples/book/printing/advanced/printformoperation.h:
	Advanced example meant to demonstrate how to extend the print dialog
	and create a custom preview dialog.
	* examples/book/printing/simple:
	* examples/book/printing/simple/Makefile.am:
	* examples/book/printing/simple/examplewindow.cc:
	* examples/book/printing/simple/examplewindow.h:
	* examples/book/printing/simple/main.cc:
	* examples/book/printing/simple/printformoperation.cc:
	* examples/book/printing/simple/printformoperation.h:
	Printing API example showing the essential work, relying on the
	external viewer program (previewing still needs more work).

2006-07-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/pagesetup.hg:
	* gtk/src/papersize.hg:
	* gtk/src/printer.hg:
	* gtk/src/printjob.hg: 
	* gtk/src/printoperationpreview.hg:
	* gtk/src/printsettings.hg: Added class documentation, based on the 
	C documentation.
	* gtk/src/printoperation.ccg:
	* gtk/src/printoperation.hg: custom_widget_appl signal: Pass the 
	widget by pointer, in case the C developers ever decide that it may be null.
	SlotPrintSetupDone: Pass a _const_ RefPtr.
	run_page_setup_dialog_async(), run_page_setup_dialog(): Pass _const_ PageSetup and 
	PrintSettings, because I think the function does not change them.
	* examples/book/printing/examplewindow.cc:
	* examples/book/printing/examplewindow.h:
	* examples/book/printing/previewdialog.cc: