@@ -1,7 +1,7 @@
 include $(top_srcdir)/examples/Makefile.am_fragment
 
 #Build the executable, but don't install it.
-noinst_PROGRAMS = printex
-printex_SOURCES = examplewindow.h examplewindow.cc main.cc \
+noinst_PROGRAMS = example
+example_SOURCES = examplewindow.h examplewindow.cc main.cc \
 		  previewdialog.h previewdialog.cc \
 		  printformoperation.h printformoperation.cc
