@@ -1,6 +1,6 @@
 include $(top_srcdir)/examples/Makefile.am_fragment
 
 #Build the executable, but don't install it.
-noinst_PROGRAMS = printex
-printex_SOURCES = examplewindow.h examplewindow.cc main.cc \
+noinst_PROGRAMS = example
+example_SOURCES = examplewindow.h examplewindow.cc main.cc \
 		  printformoperation.h printformoperation.cc
