@@ -1,3 +1,9 @@
+2006-07-08  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/printing/advanced/Makefile.am:
+	* examples/book/printing/simple/Makefile.am: Rename the executable to 
+	example, to match the other examples.
+
 2006-07-07  Marko Anastasov <marko@marko.anastasov.name>
 
 	* configure.in
